cambio de alert por parrafo

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         </div>
       </div>
       <button class="btn-stickers">Verificar</button>
+      <p class="verificacion-stickers"></p>
     </div>
     <hr />
     <div class="problema3">
@@ -68,6 +69,7 @@
         </select>
       </div>
       <button class="btn-pass">Verificar</button>
+      <p class="verificacion-pass"></p>
     </div>
   </body>
 </html>
